# eve-spai

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: cross-check.yml  release.yml  version-check.yml  warm-cache.yml
app/: Cargo.toml  build.rs
app/src/: activity.rs  affiliation.rs  alerts.rs  alliances.rs  app.rs  auth.rs  battle.rs  battle_3usx_fight.txt  breport.rs  brshare.rs  brview.rs  camp.rs  charlookup.rs  chatlog.rs  dict.rs  doctrines.rs  dscan.rs  esi.rs  esilog.rs  factions.rs  gamelog.rs  gamewatcher.rs  geo.rs  image_cache.rs  instance.rs  intel.rs  ipc.rs  jabber.rs  jumproute.rs  kills.rs  logpaths.rs  lookup.rs  main.rs  map.rs  nav.rs  overlay.rs  packs.rs  pickers.rs  pilot.rs  pings.rs  (+17 more)
crates/br-core/: Cargo.toml
crates/br-core/src/: battle.rs  lib.rs  packs.rs
crates/server/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/server/deploy/: .env.example  README.md  docker-compose.yml  init-db.sql  nginx-eve-spai-br.conf
crates/server/migrations/: 0001_init.sql  0002_search_names.sql
crates/server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  pipeline.rs  routes.rs  session.rs  state.rs  views.rs
crates/server/tests/: integration.rs
docs/: DESIGN.md  INTEL_PARSER_REDESIGN.md  KNOWN_ISSUES.md  MAP_MODES.md  WORMHOLES_AND_NEXT.md
site/: index.html
