[workspace]
members = ["app", "crates/br-core"]
resolver = "2"

[workspace.package]
version = "0.4.10"
edition = "2021"
license = "MIT"
repository = "https://github.com/Amryu/eve-spai"

# Build profile tuned for a small, lean release binary (see docs/DESIGN.md §3).
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
