[workspace]
members = ["app", "crates/br-core"]
resolver = "2"

[workspace.package]
version = "0.5.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/Amryu/eve-spai"

# Build profile tuned for a small, lean release binary (see docs/DESIGN.md §3).
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
# Unwind, not abort: a panic on a background thread (the log watcher parsing an odd chat line, a
# sound/jabber worker) must not take the whole app down, and catch_unwind only works under unwind.
panic = "unwind"
