[package]
name = "eve-spai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EVE Spai — a lean EVE Online intel tool"

[[bin]]
name = "eve-spai"
path = "src/main.rs"

[dependencies]
eframe = "0.34"
egui = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
directories = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"
