[package]
name = "eve-spai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EVE Spai — a lean EVE Online intel tool"

[[bin]]
name = "eve-spai"
path = "src/main.rs"

[dependencies]
eframe = "0.34"
egui = "0.34"
egui-phosphor = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
directories = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls", "webpki-roots", "json", "form"] }
csv = "1"
tiny_http = "0.12"
open = "5"
sha2 = "0.11"
base64 = "0.22"
getrandom = "0.2"
keyring = "4"
notify-rust = "4"
