[package]
name = "eve-spai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EVE Spai — a lean EVE Online intel tool"

[[bin]]
name = "eve-spai"
path = "src/main.rs"

# Embed the Windows application icon into the .exe (build.rs). winresource is pure Rust and
# compiles on every host; build.rs only invokes it for a Windows *target*, so non-Windows builds
# are unaffected.
[build-dependencies]
winresource = "0.1"

[dependencies]
eframe = "0.34"
egui = "0.34"
egui_extras = { version = "0.34", default-features = false, features = ["http", "image"] }
egui-phosphor = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
directories = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
anyhow = "1"
winit = "0.30"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time", "net", "io-util", "sync"] }
xmpp = { version = "0.7", default-features = false, features = ["ring", "starttls", "rustls-native-certs", "escape-hatch"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls", "webpki-roots", "json", "form"] }
csv = "1"
tiny_http = "0.12"
open = "5"
sha2 = "0.11"
base64 = "0.22"
getrandom = "0.2"
keyring = "4"
notify-rust = "4"
zip = { version = "2", default-features = false, features = ["deflate"] }
arboard = { version = "3", default-features = false }
# Cross-platform advisory file locks for the single-instance guard (main.rs). Default
# `sync` feature only — operates on std::fs::File, no extra runtime deps.
fs4 = "1.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
# async-io (not tokio) to match accesskit/zbus in the rest of the tree — avoids
# forcing zbus into tokio mode (which breaks keyring/notify-rust at runtime).
ksni = { version = "0.3", default-features = false, features = ["async-io", "blocking"] }

# Windows: also build the wgpu backend. OpenGL/glow can't get its per-pixel alpha
# DWM-composited on Windows (transparent windows render as an opaque square), but wgpu
# (DX12) picks a PreMultiplied composite-alpha surface and does it correctly. The renderer
# is switched to wgpu on Windows in main.rs; Linux/macOS stay on glow.
[target.'cfg(windows)'.dependencies]
eframe = { version = "0.34", features = ["wgpu"] }

# System tray on Windows + macOS (Linux uses ksni above). Created on the main thread and
# driven through the winit/eframe event loop.
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tray-icon = "0.19"
